fix problem in layout on safari

--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,8 @@ header {
     position: fixed;
     inset: 0;
     height: 100%;
-    width: 100%;
+    width: 100vw;
+    width: -webkit-fill-available;
     z-index: 8888;
     
     background: #ffffffde;
@@ -73,7 +74,7 @@ header {
   }
 
   .link-interno {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   .burguer-menu {
